--- a/style.css
+++ b/style.css
@@ -3,7 +3,11 @@
 }
 
 .link-table {
-    display:inline-flex;
-    justify-content: space-between;
     text-align: left;
+    display: inline-flex;
+}
+
+.link-column{
+    display: inline-block;
+    vertical-align: middle;
 }
